--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
           alt="Карта России"
         />
         <ul class="header__lang-links">
-          <li class="header__lang-link" href="#">
+          <li class="header__lang-link">
             <a href="#" class="header__block">Ru</a>
           </li>
-          <li class="header__lang-link" href="#">
+          <li class="header__lang-link">
             <a href="#" class="header__block header__block_none">En</a>
           </li>
         </ul>
@@ -68,32 +68,32 @@
       <section class="photo-grid">
         <img
           class="photo-grid__item"
-          alt=""
+          alt="Окна поезда"
           src="./image/photo-grid-train.jpg"
         />
         <img
           class="photo-grid__item"
-          alt=""
+          alt="Горное небо"
           src="./image/photo-grid-atharva-tulsi.jpg"
         />
         <img
           class="photo-grid__item"
-          alt=""
+          alt="Собака в поле на сене"
           src="./image/photo-grid-tuman.jpg"
         />
         <img
           class="photo-grid__item"
-          alt=""
+          alt="Туманный лес"
           src="./image/photo-grid-sochi.jpg"
         />
         <img
           class="photo-grid__item"
-          alt=""
+          alt="Колесо на льду"
           src="./image/photo-grid-arisa.jpg"
         />
         <img
           class="photo-grid__item"
-          alt=""
+          alt="Берег Байкала"
           src="./image/photo-grid-baikal.jpg"
         />
         <img
@@ -103,27 +103,27 @@
         />
         <img
           class="photo-grid__item"
-          alt=""
+          alt="Гора Эльбрус"
           src="./image/photo-grid-kondratiev.jpg"
         />
         <img
           class="photo-grid__item"
-          alt=""
+          alt="Горы Камчатки"
           src="./image/photo-grid-kamchatka-1.jpg"
         />
         <img
           class="photo-grid__item"
-          alt=""
+          alt="Горы Комчатки"
           src="./image/photo-grid-kamchatka-2.jpg"
         />
         <img
           class="photo-grid__item"
-          alt=""
+          alt="Скалы Байкала"
           src="./image/photo-grid-baikal-2.jpg"
         />
         <img
           class="photo-grid__item"
-          alt=""
+          alt="Гора Ергаки"
           src="./image/photo-grid-ergaki.jpg"
         />
       </section>
@@ -137,7 +137,7 @@
                 park-kosa.ru
               </a>
             </div>
-            <img alt="" src="./image/place-kosa.jpg" class="place__image" />
+            <img alt="Курская Коса" src="./image/place-kosa.jpg" class="place__image" />
             <div class="place__paragraph-list">
               <p class="place__paragraph-one">
                 Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два
@@ -166,7 +166,7 @@
                 National Geographic
               </a>
             </div>
-            <img alt="" src="./image/place-kolsky.jpg" class="place__image" />
+            <img alt="Кольский полуостров" src="./image/place-kolsky.jpg" class="place__image" />
             <div class="place__paragraph-list">
               <p class="place__paragraph-one">
                 Почти весь полуостров находится за Полярным кругом. Саамская
@@ -195,7 +195,7 @@
                 YouTube
               </a>
             </div>
-            <img alt="" src="./image/place-altai.jpg" class="place__image" />
+            <img alt="Лесной Алтай" src="./image/place-altai.jpg" class="place__image" />
             <div class="place__paragraph-list">
               <p class="place__paragraph-one">
                 Алтай — одно из красивейших мест в России. В первую очередь
@@ -222,7 +222,7 @@
               </a>
             </div>
             <img
-              alt=""
+              alt="Чистый лед Байкала"
               src="./image/place-winter-baikal.jpg"
               class="place__image"
             />
@@ -250,7 +250,7 @@
                 http://vodlozero.ru/
               </a>
             </div>
-            <img alt="" src="./image/place-karelia.jpg" class="place__image" />
+            <img alt="Река Кареллии" src="./image/place-karelia.jpg" class="place__image" />
             <p class="place__paragraph-one">
               Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
               сибирская лиственница не растёт западнее Водлозера. Зато здесь она
