--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Путешествие по России</title>
     <link rel="stylesheet" href="./pages/index.css" />
   </head>
+
   <body class="body">
+    <div class="page">
       <header class="header">
         <img
           class="header__logo"
@@ -24,20 +26,20 @@
         </ul>
       </header>
       <section class="section">
-      <div class="lead">
-        <h1 class="lead__title">Путешествия по России</h1>
-        <p class="lead__subtitle">
-          Настоящая страна не в выпусках новостей, а здесь.
-        </p>
-        <div class="lead__caption-links">
-          <img
-            class="lead__image"
-            src="./image/lead-polka.jpg"
-            alt="маршрут по России"
-          />
-          <p class="lead__caption">ваша полка — верхняя</p>
+        <div class="lead">
+          <h1 class="lead__title">Путешествия по России</h1>
+          <p class="lead__subtitle">
+            Настоящая страна не в выпусках новостей, а здесь.
+          </p>
+          <div class="lead__caption-links">
+            <img
+              class="lead__image"
+              src="./image/lead-polka.jpg"
+              alt="маршрут по России"
+            />
+            <p class="lead__caption">ваша полка — верхняя</p>
+          </div>
         </div>
-      </div>
         <div class="intro">
           <h2 class="intro__title">Чего мы там не видели?</h2>
           <p class="intro__text">
@@ -137,15 +139,19 @@
                 park-kosa.ru
               </a>
             </div>
-            <img alt="Курская Коса" src="./image/place-kosa.jpg" class="place__image" />
+            <img
+              alt="Курская Коса"
+              src="./image/place-kosa.jpg"
+              class="place__image"
+            />
             <div class="place__paragraph-list">
-              <p class="place__paragraph-one">
+              <p class="place__paragraph">
                 Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два
                 водных горизонта — спокойного Куршского залива с одной стороны и
                 подёрнутого рябью волн Балтийского моря с другой. Уникальная
                 природная зона на краю российского анклава.
               </p>
-              <p class="place__paragraph-two">
+              <p class="place__paragraph place__paragraph_title">
                 На этом Калининградская область не заканчивается. Для
                 путешественника и исследователя там же по соседству — самая
                 западная точка России, Балтийская коса, — и немецкое наследие
@@ -166,14 +172,18 @@
                 National Geographic
               </a>
             </div>
-            <img alt="Кольский полуостров" src="./image/place-kolsky.jpg" class="place__image" />
+            <img
+              alt="Кольский полуостров"
+              src="./image/place-kolsky.jpg"
+              class="place__image"
+            />
             <div class="place__paragraph-list">
-              <p class="place__paragraph-one">
+              <p class="place__paragraph">
                 Почти весь полуостров находится за Полярным кругом. Саамская
                 тундра, от которой на юг — тайга, а на север — Ледовитый океан,
                 прикидывающийся Баренцевым морем.
               </p>
-              <p class="place__paragraph-two">
+              <p class="place__paragraph place__paragraph_title">
                 Возможно, вы смотрели Звягинцева и даже слышали историю
                 арктического фестиваля в Териберке. Возможно, слово «Хибины» не
                 осталось под снегом школьных воспоминаний об уроках географии.
@@ -195,16 +205,20 @@
                 YouTube
               </a>
             </div>
-            <img alt="Лесной Алтай" src="./image/place-altai.jpg" class="place__image" />
+            <img
+              alt="Лесной Алтай"
+              src="./image/place-altai.jpg"
+              class="place__image"
+            />
             <div class="place__paragraph-list">
-              <p class="place__paragraph-one">
+              <p class="place__paragraph">
                 Алтай — одно из красивейших мест в России. В первую очередь
                 из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные
                 соснами, горные реки и озёра. А если вы откроете в автомобиле
                 окна, сможете познакомиться с невидимым чудом здешних мест —
                 горным воздухом.
               </p>
-              <p class="place__paragraph-two">
+              <p class="place__paragraph place__paragraph_title">
                 Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом.
                 Так вы увидите всё разнообразие местной флоры и фауны. По лесам
                 Алтая бродят лоси, над хребтами летают орлы, а на равнинах
@@ -227,12 +241,12 @@
               class="place__image"
             />
             <div class="place__paragraph-list">
-              <p class="place__paragraph-one">
+              <p class="place__paragraph">
                 Всем известен Байкал как крупнейшее озеро в мире. Многие также
                 знают, что это самый большой источник пресной воды и одно из
                 красивейших мест в России.
               </p>
-              <p class="place__paragraph-two">
+              <p class="place__paragraph place__paragraph_title">
                 Конечно, это всё так. Но Байкал ещё идеальное место
                 для соревнований по скийорингу. Это такой вид спорта, когда
                 лыжник привязывает себя к мотоциклу, и тандем старается развить
@@ -250,8 +264,12 @@
                 http://vodlozero.ru/
               </a>
             </div>
-            <img alt="Река Кареллии" src="./image/place-karelia.jpg" class="place__image" />
-            <p class="place__paragraph-one">
+            <img
+              alt="Река Кареллии"
+              src="./image/place-karelia.jpg"
+              class="place__image"
+            />
+            <p class="place__paragraph">
               Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
               сибирская лиственница не растёт западнее Водлозера. Зато здесь она
               вымахивает на 30 метров — леса карельских национальных парков
@@ -305,5 +323,6 @@
         </ul>
         <p class="footer__copyright">© 2022. Алексей</p>
       </footer>
+    </div>
   </body>
 </html>
