--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       <section class="places">
         <ul class="places-list">
           <li class="place">
-            <h2 class="place__title">Куршская коса</h2>
+            <h2 class="place__title">Куршская&nbsp; коса</h2>
             <div class="place__website place__website_block">
               <p class="place__url-heading">URL</p>
               <a class="place__link" href="http://park-kosa.ru">
@@ -229,7 +229,7 @@
           </li>
           <li class="place">
             <h2 class="place__title">Зимний Байкал</h2>
-            <div class="place__website place__website_block">
+            <div class="place__website">
               <p class="place__url-heading">URL</p>
               <a class="place__link" href="https://vk.com/baikalmile">
                 https://vk.com/baikalmile
