--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
           </li>
           <li class="place">
             <h2 class="place__title">Зимний Байкал</h2>
-            <div class="place__website">
+            <div class="place__website place__website_block">
               <p class="place__url-heading">URL</p>
               <a class="place__link" href="https://vk.com/baikalmile">
                 https://vk.com/baikalmile
@@ -293,7 +293,7 @@
           По мотивам учебной темы о Транссибе — путешествие от столицы до
           Байкала на электричках.
         </p>
-        <div class="cover__overlay"></div>
+        <img class="cover__overlay" alt="Жд вокзал" src="./image/cover-trains.jpg">
       </section>
       <footer class="footer">
         <ul class="footer__links">
