--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           />
         </section>
         <section class="places">
-          <ul>
+          <ul class="places__list">
             <li class="place">
               <h2 class="place__title">Куршская&nbsp; коса</h2>
               <div class="place__website">
@@ -261,11 +261,12 @@
                   на фестивале «Байкальская миля» был поставлен мировой рекорд —
                   197.011 км/ч.
                 </p>
+                e__website_line
               </div>
             </li>
             <li class="place">
               <h2 class="place__title">Карелия</h2>
-              <div class="place__website place__website_line">
+              <div class="place__website">
                 <p class="place__url-heading">URL</p>
                 <a class="place__link" href="http://vodlozero.ru">
                   http://vodlozero.ru/
@@ -291,9 +292,8 @@
           </ul>
         </section>
         <section class="cover">
-          <div class="cover__block"></div>
           <a
-            class="cover__link"
+            class="cover__block"
             href="https://stampsy.com/na-elektrichkakh-do-baikala"
           >
             <h2 class="cover__title">До Байкала&nbsp; «на собаках»</h2>
@@ -305,7 +305,7 @@
         </section>
       </main>
       <footer class="footer">
-        <nav class="nav">
+        <nav class="footer__list-nav">
           <ul class="footer__links">
             <li class="footer__link">
               <a class="footer__link-nav" href="https://yandex.ru/maps"
